<resources>
    <string name="app_name" translatable="false">RecipesApp</string>
    <!-- Screens -->
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorites">Favorites</string>
    <string name="articles">Articles</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="recipes">Recipes</string>

    <!-- SignIn -->
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="or_login_with">Or login with</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in"><u>Sign in</u></string>

    <!-- SignUp -->
    <string name="create_account">Create an account</string>
    <string name="enter_details">Please enter details to register</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="sign_up_title">Sign Up</string>

    <!-- Profile -->
    <string name="add_photo">Add photo</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="profile">Profile</string>
    <string name="profile_detail">Select a profile photo. Later you can change it.</string>
    <string name="old_password" translatable="false">Old Password</string>
    <string name="new_password" translatable="false">New password</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Log out</string>

    <string name="default_web_client_id" translatable="false">433801035424-miod1d6ns24l6bf46psmce6hkb6qtlc8.apps.googleusercontent.com</string>
    <string name="recommendation">Recommendations</string>
    <string name="trending_search">Trending Search</string>
    <string name="recipes_found">Recipes found</string>
    <string name="recipeImage" translatable="false">recipeImage</string>
    <string name="level">Level</string>
    <string name="ingredients">Ingredients</string>
    <string name="step">Step 1</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="method">Method</string>
    <string name="time">45 min</string>
    <string name="servings">Servings: 4</string>
    <string name="rating">4.5 (19+)</string>

    <!-- Errors -->
    <string name="recipes_not_found">Recipes not found</string>

    <!-- На русском -->
    <string name="bad_request">Error 400\nBad Request. Try to change the parameters.</string>
    <string name="unauthorized">Error 401\nYou are not authorized. Please log in to your account.</string>
    <string name="payment_required">Error 402\nRequest limit exceeded. Please try again later.</string>
    <string name="forbidden">Error 403\nAccess denied.</string>
    <string name="not_found">Error 404\nThe resource was not found.</string>
    <string name="internal_server">Error 500\nInternal server error. Please try again later.</string>
    <string name="unknown">Unknown error.</string>
    <string name="no_internet">No connection. Check the Internet.</string>


    <plurals name="recipes_count">
        <item quantity="one">%s recipe found</item>
        <item quantity="few">%s recipes found</item>
        <item quantity="many">%s recipes found</item>
        <item quantity="other">%s recipes found</item>
    </plurals>

</resources>