<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"/>

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_fav"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/arcticlesFragment"
        android:icon="@drawable/ic_articles"
        android:title="@string/arcticles"/>

</menu>