<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/vertical_linear_layout"
    tools:context=".LoginFragment">

    <TextView
        android:text="@string/welcome"
        style="@style/bold_title_text_style" />

    <TextView
        android:text="@string/sign_in_to_continue"
        style="@style/small_text_style"
        android:layout_marginBottom="36dp"/>

    <EditText
        android:id="@+id/mailEditText"
        style="@style/edit_text_style"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/email"
        android:drawableStart="@drawable/email_16"
        android:drawablePadding="8dp"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/check_16"
        app:endIconMode="custom"
        app:endIconTint="@color/black"/>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/edit_text_style"
        android:layout_marginBottom="33dp"

        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:drawableStart="@drawable/lock_16"
        android:drawablePadding="8dp"
        android:paddingHorizontal="12dp"
        app:endIconDrawable="@drawable/check_16"
        app:endIconMode="custom"
        app:endIconTint="@color/black"/>

    <Button
        android:id="@+id/signInButton"
        style="@style/button_style"
        android:text="@string/sign_in"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_dont_show_without_salary"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:buttonTint="@color/main_color"
        android:text="@string/remember_me"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/text_10" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:buttonTint="@color/main_color"
        android:backgroundTint="@color/main_color"
        android:text="@string/remember_me"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/text_10"/>

    <TextView
        android:text="@string/or_login_with"
        style="@style/subtitle_text_style"
        android:textSize="@dimen/small_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/dont_have_an_account"
            style="@style/small_text_style"
            android:textSize="@dimen/text_10"/>

        <TextView
            android:id="@+id/signUpButton"
            android:text="@string/sign_up"
            style="@style/small_text_style"
            android:textSize="@dimen/text_10"
            android:textColor="@color/main_color"/>
    </LinearLayout>
</LinearLayout>