<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/vertical_linear_layout"
    android:background="@drawable/combined_background"
    tools:context=".ResetPasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResetPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        style="@style/bold_title_text_style"
        app:title="@string/reset_password"
        app:titleTextColor="?attr/colorOnSecondary"

        android:layout_gravity="start"
        app:navigationIcon="@drawable/back"
        app:iconPadding="4dp"
        app:buttonGravity="center_vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbarResetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailInputContainer"
            style="@style/material_text_input_layout_style"
            android:layout_marginBottom="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailTextInput"
                style="@style/mail_text_input_edit_text_style" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPasswordInputContainer"
            style="@style/password_text_input_layout_style"
            android:layout_marginBottom="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPasswordTextInput"
                style="@style/password_text_input_edit_text_style"
                android:hint="@string/old_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordInputContainer"
            style="@style/password_text_input_layout_style"
            android:layout_marginBottom="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordTextInput"
                style="@style/password_text_input_edit_text_style"
                android:hint="@string/new_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/default_margin"

            style="@style/subtitle_text_style"
            android:textSize="@dimen/text_12"
            android:textColor="@color/main_color"/>

        <Button
            android:id="@+id/resetPasswordButton"
            style="@style/button_style"

            android:text="@string/reset_password"
            android:enabled="false"
            android:backgroundTint="@drawable/button_selector"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>