<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/vertical_linear_layout"
    android:paddingVertical="@dimen/default_margin"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputContainer"
        style="@style/search_text_input_layout_style"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchTextInput"
            style="@style/search_text_input_edit_text_style" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/trendingSearchLayout"
        style="@style/vertical_linear_layout"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:visibility="gone">

        <TextView
            style="@style/semi_bold_title_text_style"
            android:text="@string/trending_search"
            android:layout_marginBottom="@dimen/default_margin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trendingSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/type_meal_item"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommendationLayout"
        style="@style/vertical_linear_layout"
        android:visibility="visible">

        <TextView
            style="@style/semi_bold_title_text_style"
            android:text="@string/recommendation"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendationRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/recommendation_item"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLayout"
        style="@style/vertical_linear_layout"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/recipes_count"
            style="@style/semi_bold_title_text_style"
            android:text="@string/recipes_found" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/search_item"
            android:visibility="visible"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/default_margin">

        <!-- Страница Ошибок -->
        <LinearLayout
            android:id="@+id/search_error"
            style="@style/vertical_linear_layout"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="wrap_content"
                android:layout_height="224dp"
                android:src="@drawable/ic_error_unknown2"/>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:text="@string/unknown"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                style="@style/semi_bold_title_text_style" />
        </LinearLayout>

        <!-- Страница Не найдено рецептов -->
        <LinearLayout
            android:id="@+id/search_not_found"
            style="@style/vertical_linear_layout"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:id="@+id/not_found_image"
                android:layout_width="wrap_content"
                android:layout_height="224dp"
                android:src="@drawable/ic_not_found"/>

            <TextView
                android:id="@+id/not_found_text"
                android:layout_width="match_parent"
                android:text="@string/recipes_not_found"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/default_margin"
                style="@style/semi_bold_title_text_style" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/main_color"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>



